<resources>
    <string name="app_name">ChatIn</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="info">Info</string>
    <string name="contact">Contact</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>
    <string name="block">Block</string>
    <string name="search">Search...</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="button_to_change_the_password">Button to change the password</string>
    <string name="change_image">Change Image</string>
    <string name="button_to_change_the_image">Button to change the Image</string>
    <string name="button_to_change_the_name">Button to change the name</string>
    <string name="change_name">Change Name</string>
    <string name="active_status">Active status</string>
    <string name="fullscreen_image">Fullscreen image</string>
    <string name="save_image">Save Image</string>
    <string name="active_status_button">Active Status Button</string>
</resources>