<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".activities.SettingsActivity">



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_oval="true" />


            <View
                android:id="@+id/viewSupporter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
                app:layout_constraintStart_toEndOf="@id/imageProfile"
                app:layout_constraintTop_toTopOf="@id/imageProfile" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageProfile"
                app:layout_constraintTop_toTopOf="@id/imageProfile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:layout_marginTop="@dimen/_8sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_35sdp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_visibility"
                android:layout_marginStart="@dimen/_10sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_status"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/_30sdp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchActiveStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:contentDescription="@string/active_status_button"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangeName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/button_to_change_the_name"
            android:text="@string/change_name"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            app:icon="@drawable/ic_pen"
            app:iconGravity="start"
            app:iconPadding="@dimen/_24sdp"
            app:iconSize="@dimen/_24sdp"
            app:iconTint="@color/black"
            app:strokeColor="@color/primary_dark"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangeImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"

            android:layout_marginEnd="@dimen/_35sdp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/button_to_change_the_image"
            android:text="@string/change_image"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            app:cornerRadius="@dimen/_8sdp"
            app:strokeColor="@color/primary_dark"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_image"
            app:iconGravity="start"
            app:iconSize="@dimen/_24sdp"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/_24sdp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/button_to_change_the_password"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            app:cornerRadius="@dimen/_8sdp"
            app:strokeColor="@color/primary_dark"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_lock"
            app:iconSize="@dimen/_24sdp"
            app:iconTint="@color/black"
            app:iconPadding="@dimen/_8sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:backgroundTint="@color/white"
            android:contentDescription="Delete Account Button"
            android:text="Delete Account"
            android:textAllCaps="false"
            android:textColor="@color/error"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            app:cornerRadius="@dimen/_8sdp"
            app:strokeColor="@color/error"
            app:strokeWidth="2dp"
            app:icon="@drawable/ic_delete"
            app:iconSize="@dimen/_24sdp"
            app:iconTint="@color/error"
            app:iconPadding="@dimen/_20sdp"/>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>